@@ -11,6 +11,7 @@ libgnustep-corebase_OBJC_FILES = \
   CFDate.m \
   CFDictionary.m \
   CFError.m \
+  CFPropertyList.m \
   CFStream.m \
   CFString.m \
   CFURL.m
@@ -28,6 +29,7 @@ libgnustep-corebase_HEADER_FILES = \
   CFDate.h \
   CFDictionary.h \
   CFError.h \
+  CFPropertyList.h \
   CFStream.h \
   CFString.h \
   CFStringEncodingExt.h \
